--- a/MAFI/src/main/webapp/WEB-INF/web.xml
+++ b/MAFI/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,7 @@
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee https://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
 
 	<!-- The definition of the Root Spring Container shared by all Servlets and Filters -->
+	<!-- 서버 가동 후 아래의 context-param과 listener가 세트로 첫번쨰로 실행됨  -->
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>/WEB-INF/spring/root-context.xml</param-value>
@@ -15,6 +16,7 @@
 	</listener>
 
 	<!-- Processes application requests -->
+	<!--얘는 톰캣이 최초에 구동될때 실행되는게 아니라 클라이언트에서 요청이 올때 생성됨  -->
 	<servlet>
 		<servlet-name>appServlet</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
